--- a/hydraulic.v2.8.4
+++ b/hydraulic.v2.8.4
@@ -11,7 +11,8 @@
       "source": [
         "#@title { form-width: \"2%\" }\n",
         "#@markdown\n",
-        "# \n",
+        "# asd3334 \n",
+        "\n",
         "dev = False\n",
         "\n",
         "import os, sys, platform, pytz, time, traceback, unicodedata, re, requests, random\n",
@@ -405,7 +406,6 @@
         "    # pathestask.name = DRIVE_AND_PATHES\n",
         "    # config.setupthreads.add(pathestask)\n",
         "    # pathestask.start()\n",
-        "    storageandpathes()\n",
         "    def setup_lt():\n",
         "        if not 'libtorrent' in config.pkgs:\n",
         "            try:\n",
@@ -434,6 +434,8 @@
         "        scrape_watchedmovielist_task.name = SCRAPE_WATCHED_LIST\n",
         "        config.setupthreads.add(scrape_watchedmovielist_task)\n",
         "        scrape_watchedmovielist_task.start()\n",
+        "\n",
+        "storageandpathes()\n",
         "\n",
         "def arethreadsworking(threadset: set[Thread], v= False):\n",
         "    alivethreads = set()\n",
@@ -1627,7 +1629,10 @@
         "        error('Movie name is empty')\n",
         "        return           \n",
         "    info(f\"Checking if the movie {name} is downloaded.\")\n",
-        "    movies_raw = filter_checks(next(os.walk(config.movies_path))[1])\n",
+        "    try:\n",
+        "        movies_raw = filter_checks(next(os.walk(config.movies_path))[1])\n",
+        "    except:\n",
+        "        return False\n",
         "    name_s = transtitle(name)\n",
         "    for i in range(len(movies_raw)):\n",
         "        targetpath = path_movie(movies_raw[i])\n",
@@ -1645,7 +1650,10 @@
         "        error('Show name is empty')\n",
         "        return\n",
         "    info(f\"Checking if the show {searchshow} is downloaded\")\n",
-        "    shows_raw = filter_checks(next(os.walk(config.tv_path))[1])\n",
+        "    try:\n",
+        "        shows_raw = filter_checks(next(os.walk(config.tv_path))[1])\n",
+        "    except:\n",
+        "        return False\n",
         "    name_trans = transtitle(searchshow, True)\n",
         "    for i in range(len(shows_raw)):\n",
         "        targetpath = path_tvshow(shows_raw[i])\n",
