--- a/hydraulic.v2.8.4
+++ b/hydraulic.v2.8.4
@@ -449,9 +449,9 @@
         "\n",
         "import urllib\n",
         "import pandas as pd\n",
-        "import panel\n",
+        "import panel as pn\n",
         "from bokeh.models.widgets.tables import CheckboxEditor\n",
-        "panel.extension('tabulator')\n",
+        "pn.extension('tabulator')\n",
         "from IPython.display import Javascript\n",
         "import ipywidgets as widgets\n",
         "from ipywidgets import VBox, HBox, Box, HTML, Text, FloatProgress, Button, Label, Dropdown, DatePicker, Checkbox, Layout\n",
@@ -1361,7 +1361,7 @@
         "    totalpages = 0\n",
         "    page = 0\n",
         "    pageresultcount = 0\n",
-        "    table: panel.widgets.Tabulator = None\n",
+        "    table: pn.widgets.Tabulator = None\n",
         "    tableoutput: Output = None\n",
         "    pagination_handler = None\n",
         "    pagination_container: HBox = None\n",
@@ -1429,7 +1429,7 @@
         "\n",
         "    def getresultstable(self):\n",
         "        dataframe = self.getdataframe()\n",
-        "        self.table = panel.widgets.Tabulator(dataframe,\n",
+        "        self.table = pn.widgets.Tabulator(dataframe,\n",
         "                                                disabled= True,\n",
         "                                                sizing_mode= 'stretch_width',\n",
         "                                                widths= imdbresultstablecolumnwidths,\n",
@@ -1493,7 +1493,7 @@
         "    \n",
         "    def getresultstable(self):\n",
         "        dataframe = self.getdataframe()\n",
-        "        self.table: panel.widgets.Tabulator = panel.widgets.Tabulator(dataframe,\n",
+        "        self.table: pn.widgets.Tabulator = pn.widgets.Tabulator(dataframe,\n",
         "                                                disabled= True,\n",
         "                                                sizing_mode= 'stretch_width',\n",
         "                                                widths= searchresultstablecolumnwidths,\n",
@@ -1914,7 +1914,7 @@
         "    hash = \"\"\n",
         "    selectedfiles_count = \"\"\n",
         "    files: list[DownloadFile] = None\n",
-        "    filetable: panel.widgets.Tabulator = None\n",
+        "    filetable: pn.widgets.Tabulator = None\n",
         "    filetableoutput: Output = None\n",
         "    selectintervals_button = None\n",
         "    selectall_button = None\n",
@@ -5160,7 +5160,7 @@
         "\n",
         "def makefiletable(files: list[DownloadFile]):\n",
         "    dataframe = getdownloadsdataframe(files)\n",
-        "    filetable = panel.widgets.Tabulator(dataframe, \n",
+        "    filetable = pn.widgets.Tabulator(dataframe, \n",
         "                                        sizing_mode= 'stretch_width', \n",
         "                                        widths= filetablecolumnwidths, \n",
         "                                        disabled= False, \n",
