--- a/hydraulic.v2.8.4
+++ b/hydraulic.v2.8.4
@@ -450,11 +450,13 @@
         "import urllib\n",
         "import pandas as pd\n",
         "import panel as pn\n",
-        "from bokeh.models.widgets.tables import CheckboxEditor\n",
+        "from bokeh.models.widgets.tables import CheckboxEditor, HTMLTemplateFormatter\n",
         "pn.extension('tabulator')\n",
         "from IPython.display import Javascript\n",
         "import ipywidgets as widgets\n",
         "from ipywidgets import VBox, HBox, Box, HTML, Text, FloatProgress, Button, Label, Dropdown, DatePicker, Checkbox, Layout\n",
+        "import __main__ as main\n",
+        "main.__file__ = \"main_file\"\n",
         "\n",
         "# init UI\n",
         "\n",
@@ -1286,16 +1288,16 @@
         "    labels = \"\"\n",
         "\n",
         "class IMDBTitle:\n",
-        "    def __init__(self, title, runtime, rating, votes, genres= \"\", directors= \"\", staring= \"\"):\n",
+        "    def __init__(self, title, runtime, rating, votes, genres= \"\", directors= \"\", stars= \"\"):\n",
         "        self.title = title\n",
         "        self.runtime = runtime\n",
         "        self.rating = rating\n",
         "        self.votes = votes\n",
         "        self.director = directors\n",
-        "        self.staring = staring\n",
+        "        self.stars = stars\n",
         "        self.genres = genres\n",
         "\n",
-        "    title = runtime = rating = votes = director = staring = genres = \"\"\n",
+        "    title = runtime = rating = votes = director = stars = genres = \"\"\n",
         "    downloaded = watched = False\n",
         "\n",
         "class DownloadResult:\n",
@@ -1317,17 +1319,18 @@
         "    downloaded = watched = False\n",
         "    attrs: DownloadAttrs = None\n",
         "\n",
+        "htmlformatter = HTMLTemplateFormatter()\n",
         "pagebtn_layout= {'width':'29px', 'height':'29px', 'padding': '2px', 'margin': '0 6px 0 0'}\n",
         "resultsrowfontsize = '16px'\n",
         "downloadbtn = '<i class=\"ico ico-download\"></i>'\n",
-        "searchresultstableformatters = {}\n",
+        "searchresultstableformatters = {'Name': htmlformatter, 'Uploader': htmlformatter}\n",
         "searchresultstablecolumnwidths={'Name': '52%', 'Date': '9%', 'Size': '8%', 'Seeders': '8%', 'Leechers': '8%', 'Uploader': '10%', \" \": \"5%\"}\n",
         "searchresultstablecolumnalignments={'Name': 'left', 'Date': 'center', 'Size': 'center', 'Seeders': 'center', 'Leechers': 'center', 'Uploader': 'center', \" \": \"center\"}\n",
         "resultstablebuttons = {\"Download\": downloadbtn}\n",
         "\n",
-        "imdbresultstableformatters = {}\n",
+        "imdbresultstableformatters = {\"Title\": htmlformatter,  \"Director\": htmlformatter, \"Staring\": htmlformatter}\n",
         "imdbresultstablesorters = [{'field': 'Downloaded', 'dir': 'desc'},]\n",
-        "imdbresultstablecolumnwidths ={\"Title\":'21%',  \"Director\": '10%', \"Staring\": '20%',\"Genres\": '14%', \"Rating\": '6%', \"Votes\": '5%', \"Runtime\": '5%', \"Downloaded\": '7%', \"Watched\": '6%', \" \": '3%'}\n",
+        "imdbresultstablecolumnwidths ={\"Title\":'21%',  \"Director\": '10%', \"Staring\": '20%',\"Genres\": '13%', \"Rating\": '5%', \"Votes\": '5%', \"Runtime\": '5%', \"Downloaded\": '7%', \"Watched\": '6%', \" \": '3%'}\n",
         "imdbresultstablecolumnalignments ={'Title': 'left', 'Director': 'left', 'Staring': 'left', 'Genres': 'left', 'Rating': 'center', 'Votes': 'center', \"Runtime\": 'center', \"Downloaded\": 'center', \"Watched\": 'center', \" \": \"center\"}\n",
         "\n",
         "icon_css = \"\"\"background: url( \"data:image/svg+xml,%3Csvg%20id%3D%22download-svg%22%20width%3D%2225px%22%20height%3D%2225px%22%20viewBox%3D%220%200%2024%2024%22%20fill%3D%22none%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Cpath%20opacity%3D%220.5%22%20fill-rule%3D%22evenodd%22%20clip-rule%3D%22evenodd%22%20d%3D%22M3%2014.25C3.41421%2014.25%203.75%2014.5858%203.75%2015C3.75%2016.4354%203.75159%2017.4365%203.85315%2018.1919C3.9518%2018.9257%204.13225%2019.3142%204.40901%2019.591C4.68577%2019.8678%205.07435%2020.0482%205.80812%2020.1469C6.56347%2020.2484%207.56459%2020.25%209%2020.25H15C16.4354%2020.25%2017.4365%2020.2484%2018.1919%2020.1469C18.9257%2020.0482%2019.3142%2019.8678%2019.591%2019.591C19.8678%2019.3142%2020.0482%2018.9257%2020.1469%2018.1919C20.2484%2017.4365%2020.25%2016.4354%2020.25%2015C20.25%2014.5858%2020.5858%2014.25%2021%2014.25C21.4142%2014.25%2021.75%2014.5858%2021.75%2015V15.0549C21.75%2016.4225%2021.75%2017.5248%2021.6335%2018.3918C21.5125%2019.2919%2021.2536%2020.0497%2020.6517%2020.6516C20.0497%2021.2536%2019.2919%2021.5125%2018.3918%2021.6335C17.5248%2021.75%2016.4225%2021.75%2015.0549%2021.75H8.94513C7.57754%2021.75%206.47522%2021.75%205.60825%2021.6335C4.70814%2021.5125%203.95027%2021.2536%203.34835%2020.6517C2.74643%2020.0497%202.48754%2019.2919%202.36652%2018.3918C2.24996%2017.5248%202.24998%2016.4225%202.25%2015.0549C2.25%2015.0366%202.25%2015.0183%202.25%2015C2.25%2014.5858%202.58579%2014.25%203%2014.25Z%22%20fill%3D%22%231C274C%22%2F%3E%3Cpath%20fill-rule%3D%22evenodd%22%20clip-rule%3D%22evenodd%22%20d%3D%22M12%2016.75C12.2106%2016.75%2012.4114%2016.6615%2012.5535%2016.5061L16.5535%2012.1311C16.833%2011.8254%2016.8118%2011.351%2016.5061%2011.0715C16.2004%2010.792%2015.726%2010.8132%2015.4465%2011.1189L12.75%2014.0682V3C12.75%202.58579%2012.4142%202.25%2012%202.25C11.5858%202.25%2011.25%202.58579%2011.25%203V14.0682L8.55353%2011.1189C8.27403%2010.8132%207.79963%2010.792%207.49393%2011.0715C7.18823%2011.351%207.16698%2011.8254%207.44648%2012.1311L11.4465%2016.5061C11.5886%2016.6615%2011.7894%2016.75%2012%2016.75Z%22%20fill%3D%22%231C274C%22%2F%3E%3C%2Fsvg%3E\" );\"\"\"\n",
@@ -1417,7 +1420,7 @@
         "        for result in self.results:\n",
         "            resulttablesource['Title'].append(result.title)\n",
         "            resulttablesource['Director'].append(result.director)\n",
-        "            resulttablesource['Staring'].append(result.staring)\n",
+        "            resulttablesource['Staring'].append(result.stars)\n",
         "            resulttablesource['Genres'].append(result.genres)\n",
         "            resulttablesource['Rating'].append(result.rating)\n",
         "            resulttablesource['Votes'].append(result.votes)\n",
@@ -1449,9 +1452,8 @@
         "        return self.table  \n",
         "\n",
         "    def applytablestyle(self):\n",
-        "        #self.table.style.apply(lambda s : [\"color: #03ba00\" for i in range(len(s))], subset=['Seeders'])\n",
         "        self.table.style.apply(lambda s : [download_css for i in range(len(s))], subset=[' '])\n",
-        "        self.table.style.apply(lambda s : [wordwrap_css for i in range(len(s))], subset=['Staring'])\n",
+        "        self.table.style.apply(lambda s : [wordwrap_css for i in range(len(s))])\n",
         "\n",
         "    def getcontrolsbox(self):\n",
         "        controls_hbox = HBox((), layout= {})\n",
@@ -2311,6 +2313,18 @@
         "\n",
         "from math import ceil\n",
         "\n",
+        "windowtargetstr = '<a target=\"_blank\"'\n",
+        "stars_re = r\"(?<=Stars:)<a href.*</a>\"\n",
+        "director_re = r\"(?<=Director:)<a href.*</a>(?=<span)\"\n",
+        "\n",
+        "def process_title_link(title_tag, year_text):\n",
+        "    #year = re.search(year_re, year_raw)\n",
+        "    #year = f\" {year.group()}\" if year else \"\"\n",
+        "    title = str(title_tag).replace(\"<a\", windowtargetstr).replace(\"</a>\", f\"{year_text}</a>\")\n",
+        "    table = title.maketrans({\":\":None, \"(\": None, \"?\": None, \")\": None})\n",
+        "    title = title.translate(table).replace(\"&\", \"and\")\n",
+        "    return title #normalizestring(title)\n",
+        "\n",
         "def updateIMDBresult(result: IMDBResult, page):\n",
         "    if page in result.resultpages:\n",
         "        result.results = result.resultpages[page]\n",
@@ -2397,9 +2411,9 @@
         "        allitems = main.findAll(class_=\"lister-item\")\n",
         "        for item in allitems:\n",
         "            try:\n",
-        "                title_raw = item.find(class_=\"lister-item-header\").a.text\n",
-        "                year_raw = item.find(class_=\"lister-item-year\").text\n",
-        "                fulltitle = find_title(title_raw, year_raw)\n",
+        "                title_tag = item.find(class_=\"lister-item-header\").a\n",
+        "                year_text = item.find(class_=\"lister-item-year\").text\n",
+        "                fulltitle = process_title_link(title_tag, year_text)\n",
         "                runtime = item.find(class_=\"runtime\")\n",
         "                rating = item.find(class_=\"ratings-imdb-rating\")[\"data-value\"]\n",
         "                votes = item.find(\"span\", {\"name\":\"nv\"}).text.strip()\n",
@@ -2409,15 +2423,13 @@
         "                if genres: genres = genres.text.strip()\n",
         "                else: genres = \"\"\n",
         "                ppl = item.select_one(\"div.lister-item-content > p:nth-child(5)\").text\n",
-        "                splt = ppl.split(\"| \\n\")\n",
-        "                if len(splt) == 2:\n",
-        "                  directors = re.sub(r\"\\n|\\s{3,}|Directors?:|Stars?:\", \"\", splt[0])\n",
-        "                  staring = re.sub(r\"\\n|\\s{3,}|Directors?:|Stars?:\", \"\", splt[1])\n",
-        "                else:\n",
-        "                  directors = \"\"\n",
-        "                  staring = \"\"\n",
-        "                  error(f\"Title people info not found: {' & '.join(splt)}\")\n",
-        "                title= IMDBTitle(title= fulltitle, runtime= runtime, rating= rating, votes= votes, genres= genres, directors= directors, staring= staring)\n",
+        "\n",
+        "                pplstr = str(ppl).replace('\\n', '')\n",
+        "                search = re.search(stars_re, pplstr)\n",
+        "                stars = search.group().replace(\"<a\", windowtargetstr) if search else \"\"\n",
+        "                search = re.search(director_re, pplstr)\n",
+        "                directors = search.group().replace(\"<a\", windowtargetstr) if search else \"\"\n",
+        "                title= IMDBTitle(title= fulltitle, runtime= runtime, rating= rating, votes= votes, genres= genres, directors= directors, stars= stars)\n",
         "                if fulltitle in watched_movies_list:\n",
         "                    title.watched = True\n",
         "                    watched.append(title)\n",
@@ -5640,7 +5652,8 @@
         "# when cell done executing with setup thread running in the background, output is cleared.\n",
         "# to debug and see exceptions turn off all back threads.\n",
         "# format table:: table.style.format({\"ww1\": lambda value: {\"white-space\": \"pre-wrap\", \"word-break\": \"break-word\"}})\n",
-        "# t1 = t.style.format({\"aa\": lambda value: html.unescape(value)})"
+        "# t1 = t.style.format({\"aa\": lambda value: html.unescape(value)})\n",
+        "# an issue happens after inhereting bokeh.models.cell_formatter class, then creating a tabulator and display it"
       ]
     },
     {
