--- a/hydraulic.v2.8.4
+++ b/hydraulic.v2.8.4
@@ -11,7 +11,7 @@
       "source": [
         "#@title { form-width: \"2%\" }\n",
         "#@markdown\n",
-        "# asssfaa \n",
+        "# sgat2222\n",
         "\n",
         "dev = False\n",
         "\n",
@@ -1064,6 +1064,8 @@
         "\n",
         "## IMDB\n",
         "\n",
+        "IMDB_BASE = \"https://www.imdb.com\"\n",
+        "\n",
         "IMDB_MOVIE_TITLE = \"feature\"\n",
         "IMDB_TV_TITLE = \"tv_series\"\n",
         "IMDB_ANY_TITLE = \"\"\n",
@@ -1328,10 +1330,10 @@
         "searchresultstablecolumnalignments={'Name': 'left', 'Date': 'center', 'Size': 'center', 'Seeders': 'center', 'Leechers': 'center', 'Uploader': 'center', \" \": \"center\"}\n",
         "resultstablebuttons = {\"Download\": downloadbtn}\n",
         "\n",
-        "imdbresultstableformatters = {\"Title\": htmlformatter,  \"Director\": htmlformatter, \"Staring\": htmlformatter}\n",
+        "imdbresultstableformatters = {\"Title\": htmlformatter,  \"Director\": htmlformatter, \"Stars\": htmlformatter}\n",
         "imdbresultstablesorters = [{'field': 'Downloaded', 'dir': 'desc'},]\n",
-        "imdbresultstablecolumnwidths ={\"Title\":'21%',  \"Director\": '10%', \"Staring\": '20%',\"Genres\": '13%', \"Rating\": '5%', \"Votes\": '5%', \"Runtime\": '5%', \"Downloaded\": '7%', \"Watched\": '6%', \" \": '3%'}\n",
-        "imdbresultstablecolumnalignments ={'Title': 'left', 'Director': 'left', 'Staring': 'left', 'Genres': 'left', 'Rating': 'center', 'Votes': 'center', \"Runtime\": 'center', \"Downloaded\": 'center', \"Watched\": 'center', \" \": \"center\"}\n",
+        "imdbresultstablecolumnwidths ={\"Title\":'21%',  \"Director\": '10%', \"Stars\": '20%',\"Genres\": '13%', \"Rating\": '5%', \"Votes\": '5%', \"Runtime\": '5%', \"Downloaded\": '7%', \"Watched\": '6%', \" \": '3%'}\n",
+        "imdbresultstablecolumnalignments ={'Title': 'left', 'Director': 'left', 'Stars': 'left', 'Genres': 'left', 'Rating': 'center', 'Votes': 'center', \"Runtime\": 'center', \"Downloaded\": 'center', \"Watched\": 'center', \" \": \"center\"}\n",
         "\n",
         "icon_css = \"\"\"background: url( \"data:image/svg+xml,%3Csvg%20id%3D%22download-svg%22%20width%3D%2225px%22%20height%3D%2225px%22%20viewBox%3D%220%200%2024%2024%22%20fill%3D%22none%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Cpath%20opacity%3D%220.5%22%20fill-rule%3D%22evenodd%22%20clip-rule%3D%22evenodd%22%20d%3D%22M3%2014.25C3.41421%2014.25%203.75%2014.5858%203.75%2015C3.75%2016.4354%203.75159%2017.4365%203.85315%2018.1919C3.9518%2018.9257%204.13225%2019.3142%204.40901%2019.591C4.68577%2019.8678%205.07435%2020.0482%205.80812%2020.1469C6.56347%2020.2484%207.56459%2020.25%209%2020.25H15C16.4354%2020.25%2017.4365%2020.2484%2018.1919%2020.1469C18.9257%2020.0482%2019.3142%2019.8678%2019.591%2019.591C19.8678%2019.3142%2020.0482%2018.9257%2020.1469%2018.1919C20.2484%2017.4365%2020.25%2016.4354%2020.25%2015C20.25%2014.5858%2020.5858%2014.25%2021%2014.25C21.4142%2014.25%2021.75%2014.5858%2021.75%2015V15.0549C21.75%2016.4225%2021.75%2017.5248%2021.6335%2018.3918C21.5125%2019.2919%2021.2536%2020.0497%2020.6517%2020.6516C20.0497%2021.2536%2019.2919%2021.5125%2018.3918%2021.6335C17.5248%2021.75%2016.4225%2021.75%2015.0549%2021.75H8.94513C7.57754%2021.75%206.47522%2021.75%205.60825%2021.6335C4.70814%2021.5125%203.95027%2021.2536%203.34835%2020.6517C2.74643%2020.0497%202.48754%2019.2919%202.36652%2018.3918C2.24996%2017.5248%202.24998%2016.4225%202.25%2015.0549C2.25%2015.0366%202.25%2015.0183%202.25%2015C2.25%2014.5858%202.58579%2014.25%203%2014.25Z%22%20fill%3D%22%231C274C%22%2F%3E%3Cpath%20fill-rule%3D%22evenodd%22%20clip-rule%3D%22evenodd%22%20d%3D%22M12%2016.75C12.2106%2016.75%2012.4114%2016.6615%2012.5535%2016.5061L16.5535%2012.1311C16.833%2011.8254%2016.8118%2011.351%2016.5061%2011.0715C16.2004%2010.792%2015.726%2010.8132%2015.4465%2011.1189L12.75%2014.0682V3C12.75%202.58579%2012.4142%202.25%2012%202.25C11.5858%202.25%2011.25%202.58579%2011.25%203V14.0682L8.55353%2011.1189C8.27403%2010.8132%207.79963%2010.792%207.49393%2011.0715C7.18823%2011.351%207.16698%2011.8254%207.44648%2012.1311L11.4465%2016.5061C11.5886%2016.6615%2011.7894%2016.75%2012%2016.75Z%22%20fill%3D%22%231C274C%22%2F%3E%3C%2Fsvg%3E\" );\"\"\"\n",
         "download_css = \"\"\"  font-size: 20px;\n",
@@ -1341,6 +1343,7 @@
         "                    color: #001dd5;\n",
         "                \"\"\"\n",
         "wordwrap_css = \"white-space: pre-wrap;\"\n",
+        "linktext_css = \"color: #014a76; text-decoration: none;\"\n",
         "\n",
         "class WebResult:\n",
         "    def __init__(self) -> None: \n",
@@ -1416,11 +1419,11 @@
         "            search_process(site= params.sites[0], search= search, attrs= self.attrs, category= params.sitecategory, sort= SEEDERSSORT, order= DESCORDER, page= 1, source= IMDB_TAB)\n",
         "\n",
         "    def getdataframe(self):\n",
-        "        resulttablesource = {\"Title\":[],  \"Director\": [], \"Staring\": [],\"Genres\": [], \"Rating\": [], \"Votes\": [], \"Runtime\": [], \"Downloaded\": [], \"Watched\": [],\" \": []}\n",
+        "        resulttablesource = {\"Title\":[],  \"Director\": [], \"Stars\": [],\"Genres\": [], \"Rating\": [], \"Votes\": [], \"Runtime\": [], \"Downloaded\": [], \"Watched\": [],\" \": []}\n",
         "        for result in self.results:\n",
         "            resulttablesource['Title'].append(result.title)\n",
         "            resulttablesource['Director'].append(result.director)\n",
-        "            resulttablesource['Staring'].append(result.stars)\n",
+        "            resulttablesource['Stars'].append(result.stars)\n",
         "            resulttablesource['Genres'].append(result.genres)\n",
         "            resulttablesource['Rating'].append(result.rating)\n",
         "            resulttablesource['Votes'].append(result.votes)\n",
@@ -1453,6 +1456,7 @@
         "\n",
         "    def applytablestyle(self):\n",
         "        self.table.style.apply(lambda s : [download_css for i in range(len(s))], subset=[' '])\n",
+        "        self.table.style.apply(lambda s : [linktext_css for i in range(len(s))], subset=['Title', 'Director', 'Stars'])\n",
         "        self.table.style.apply(lambda s : [wordwrap_css for i in range(len(s))])\n",
         "\n",
         "    def getcontrolsbox(self):\n",
@@ -2320,7 +2324,7 @@
         "def process_title_link(title_tag, year_text):\n",
         "    #year = re.search(year_re, year_raw)\n",
         "    #year = f\" {year.group()}\" if year else \"\"\n",
-        "    title = str(title_tag).replace(\"<a\", windowtargetstr).replace(\"</a>\", f\"{year_text}</a>\")\n",
+        "    title = str(title_tag).replace(\"<a href=\", f'{windowtargetstr} href={IMDB_BASE}/').replace(\"</a>\", f\" {year_text}</a>\")\n",
         "    table = title.maketrans({\":\":None, \"(\": None, \"?\": None, \")\": None})\n",
         "    title = title.translate(table).replace(\"&\", \"and\")\n",
         "    return title #normalizestring(title)\n",
@@ -2365,7 +2369,7 @@
         "            lists = (lists + \",\" if lists else lists) + config.indian_titles_list\n",
         "        if params.animationtitles: \n",
         "            lists = (lists + \",\" if lists else lists) + config.animation_titles_list \n",
-        "\n",
+        "    \n",
         "    sortandorder = params.imdbsort\n",
         "    if params.imdborder == ASCORDER:   sortandorder = sortandorder + \",asc\"\n",
         "    else:   sortandorder = sortandorder + \",desc\" \n",
@@ -2375,7 +2379,7 @@
         "    runtime = f\"&runtime={params.minruntime if params.minruntime else ''},{params.maxruntime if params.maxruntime else ''}\" if params.minruntime or params.maxruntime else ''\n",
         "    userwatched = '' # \"&my_ratings=exclude\" if params.filterwatched else ''\n",
         "    pagestr= f\"start={1+((page-1)*perpage)}\"\n",
-        "    url = f'https://www.imdb.com/search/title/?title={params.keyword}&title_type={params.titletype}{releasedates}{ratings}{votes}{runtime}{userwatched}&lists={lists}&groups={imdbgroupsandlabels}&sort={sortandorder}&view=advanced&count={perpage}&{pagestr}'\n",
+        "    url = f'{IMDB_BASE}/search/title/?title={params.keyword}&title_type={params.titletype}{releasedates}{ratings}{votes}{runtime}{userwatched}&lists={lists}&groups={imdbgroupsandlabels}&sort={sortandorder}&view=advanced&count={perpage}&{pagestr}'\n",
         "    if not result:\n",
         "        result = IMDBResult()\n",
         "        result.params = params\n",
@@ -2413,7 +2417,8 @@
         "            try:\n",
         "                title_tag = item.find(class_=\"lister-item-header\").a\n",
         "                year_text = item.find(class_=\"lister-item-year\").text\n",
-        "                fulltitle = process_title_link(title_tag, year_text)\n",
+        "                title_link = process_title_link(title_tag, year_text)\n",
+        "                title_text = find_title(title_tag.text, year_text)\n",
         "                runtime = item.find(class_=\"runtime\")\n",
         "                rating = item.find(class_=\"ratings-imdb-rating\")[\"data-value\"]\n",
         "                votes = item.find(\"span\", {\"name\":\"nv\"}).text.strip()\n",
@@ -2422,25 +2427,24 @@
         "                genres = item.find(class_=\"genre\")\n",
         "                if genres: genres = genres.text.strip()\n",
         "                else: genres = \"\"\n",
-        "                ppl = item.select_one(\"div.lister-item-content > p:nth-child(5)\").text\n",
-        "\n",
+        "                ppl = item.select_one(\"div.lister-item-content > p:nth-child(5)\")\n",
         "                pplstr = str(ppl).replace('\\n', '')\n",
         "                search = re.search(stars_re, pplstr)\n",
         "                stars = search.group().replace(\"<a\", windowtargetstr) if search else \"\"\n",
         "                search = re.search(director_re, pplstr)\n",
         "                directors = search.group().replace(\"<a\", windowtargetstr) if search else \"\"\n",
-        "                title= IMDBTitle(title= fulltitle, runtime= runtime, rating= rating, votes= votes, genres= genres, directors= directors, stars= stars)\n",
-        "                if fulltitle in watched_movies_list:\n",
+        "                title= IMDBTitle(title= title_link, runtime= runtime, rating= rating, votes= votes, genres= genres, directors= directors, stars= stars)\n",
+        "                if title_text in watched_movies_list:\n",
         "                    title.watched = True\n",
         "                    watched.append(title)\n",
-        "                if movie_exists(fulltitle):\n",
+        "                if movie_exists(title_text):\n",
         "                    downloaded.append(title)\n",
         "                    title.downloaded= True\n",
         "                    if not params.filterdownloaded:\n",
         "                        titles.append(title) \n",
         "                else:\n",
         "                    titles.append(title)\n",
-        "                info(f\"Scrapped IMDB title {fulltitle}\")\n",
+        "                info(f\"Scrapped IMDB title {title_link}\")\n",
         "            except:\n",
         "                error(ex())\n",
         "                continue       \n",
