--- a/hydraulic.v2.8.4
+++ b/hydraulic.v2.8.4
@@ -11,7 +11,7 @@
       "source": [
         "#@title { form-width: \"2%\" }\n",
         "#@markdown\n",
-        "# sgat2222\n",
+        "# chk 2111\n",
         "\n",
         "dev = False\n",
         "\n",
@@ -1343,7 +1343,6 @@
         "                    color: #001dd5;\n",
         "                \"\"\"\n",
         "wordwrap_css = \"white-space: pre-wrap;\"\n",
-        "linktext_css = \"color: #014a76; text-decoration: none;\"\n",
         "\n",
         "class WebResult:\n",
         "    def __init__(self) -> None: \n",
@@ -1456,7 +1455,6 @@
         "\n",
         "    def applytablestyle(self):\n",
         "        self.table.style.apply(lambda s : [download_css for i in range(len(s))], subset=[' '])\n",
-        "        self.table.style.apply(lambda s : [linktext_css for i in range(len(s))], subset=['Title', 'Director', 'Stars'])\n",
         "        self.table.style.apply(lambda s : [wordwrap_css for i in range(len(s))])\n",
         "\n",
         "    def getcontrolsbox(self):\n",
@@ -2317,14 +2315,14 @@
         "\n",
         "from math import ceil\n",
         "\n",
-        "windowtargetstr = '<a target=\"_blank\"'\n",
+        "windowtargetstr = 'target=\"_blank\" style= \"color: rgb(1, 74, 118); text-decoration: none;\"'\n",
         "stars_re = r\"(?<=Stars:)<a href.*</a>\"\n",
         "director_re = r\"(?<=Director:)<a href.*</a>(?=<span)\"\n",
         "\n",
         "def process_title_link(title_tag, year_text):\n",
         "    #year = re.search(year_re, year_raw)\n",
         "    #year = f\" {year.group()}\" if year else \"\"\n",
-        "    title = str(title_tag).replace(\"<a href=\", f'{windowtargetstr} href={IMDB_BASE}/').replace(\"</a>\", f\" {year_text}</a>\")\n",
+        "    title = str(title_tag).replace('<a href=\"', f'<a {windowtargetstr} href=\"{IMDB_BASE}').replace(\"</a>\", f\" {year_text}</a>\")\n",
         "    table = title.maketrans({\":\":None, \"(\": None, \"?\": None, \")\": None})\n",
         "    title = title.translate(table).replace(\"&\", \"and\")\n",
         "    return title #normalizestring(title)\n",
@@ -2415,13 +2413,13 @@
         "        allitems = main.findAll(class_=\"lister-item\")\n",
         "        for item in allitems:\n",
         "            try:\n",
-        "                title_tag = item.find(class_=\"lister-item-header\").a\n",
-        "                year_text = item.find(class_=\"lister-item-year\").text\n",
+        "                title_tag  = item.find(class_=\"lister-item-header\").a\n",
+        "                year_text  = item.find(class_=\"lister-item-year\").text\n",
         "                title_link = process_title_link(title_tag, year_text)\n",
         "                title_text = find_title(title_tag.text, year_text)\n",
-        "                runtime = item.find(class_=\"runtime\")\n",
-        "                rating = item.find(class_=\"ratings-imdb-rating\")[\"data-value\"]\n",
-        "                votes = item.find(\"span\", {\"name\":\"nv\"}).text.strip()\n",
+        "                runtime    = item.find(class_=\"runtime\")\n",
+        "                rating     = item.find(class_=\"ratings-imdb-rating\")[\"data-value\"]\n",
+        "                votes      = item.find(\"span\", {\"name\": \"nv\"}).text.strip()\n",
         "                if runtime: runtime = runtime.text.strip()\n",
         "                else: runtime = \"\"\n",
         "                genres = item.find(class_=\"genre\")\n",
@@ -2430,9 +2428,9 @@
         "                ppl = item.select_one(\"div.lister-item-content > p:nth-child(5)\")\n",
         "                pplstr = str(ppl).replace('\\n', '')\n",
         "                search = re.search(stars_re, pplstr)\n",
-        "                stars = search.group().replace(\"<a\", windowtargetstr) if search else \"\"\n",
+        "                stars = search.group().replace('<a href=\"', f'<a {windowtargetstr} href=\"{IMDB_BASE}') if search else \"\"\n",
         "                search = re.search(director_re, pplstr)\n",
-        "                directors = search.group().replace(\"<a\", windowtargetstr) if search else \"\"\n",
+        "                directors = search.group().replace('<a href=\"', f'<a {windowtargetstr} href=\"{IMDB_BASE}') if search else \"\"\n",
         "                title= IMDBTitle(title= title_link, runtime= runtime, rating= rating, votes= votes, genres= genres, directors= directors, stars= stars)\n",
         "                if title_text in watched_movies_list:\n",
         "                    title.watched = True\n",
