--- a/hydraulic.v2.8.4
+++ b/hydraulic.v2.8.4
@@ -11,7 +11,7 @@
       "source": [
         "#@title { form-width: \"2%\" }\n",
         "#@markdown\n",
-        "# chk 2111\n",
+        "# chk 2223\n",
         "\n",
         "dev = False\n",
         "\n",
@@ -2316,16 +2316,16 @@
         "from math import ceil\n",
         "\n",
         "windowtargetstr = 'target=\"_blank\" style= \"color: rgb(1, 74, 118); text-decoration: none;\"'\n",
-        "stars_re = r\"(?<=Stars:)<a href.*</a>\"\n",
-        "director_re = r\"(?<=Director:)<a href.*</a>(?=<span)\"\n",
+        "stars_re = r\"(?<=Stars?:)<a href.*</a>\"\n",
+        "director_re = r\"(?<=Directors?:)<a href.*</a>(?=<span)\"\n",
         "\n",
         "def process_title_link(title_tag, year_text):\n",
         "    #year = re.search(year_re, year_raw)\n",
         "    #year = f\" {year.group()}\" if year else \"\"\n",
-        "    title = str(title_tag).replace('<a href=\"', f'<a {windowtargetstr} href=\"{IMDB_BASE}').replace(\"</a>\", f\" {year_text}</a>\")\n",
+        "    title = str(title_tag).replace(\"</a>\", f\" {year_text}</a>\")\n",
         "    table = title.maketrans({\":\":None, \"(\": None, \"?\": None, \")\": None})\n",
         "    title = title.translate(table).replace(\"&\", \"and\")\n",
-        "    return title #normalizestring(title)\n",
+        "    return title.replace('<a href=\"', f'<a {windowtargetstr} href=\"{IMDB_BASE}') #normalizestring(title)\n",
         "\n",
         "def updateIMDBresult(result: IMDBResult, page):\n",
         "    if page in result.resultpages:\n",
