--- a/hydraulic.v2.8.4
+++ b/hydraulic.v2.8.4
@@ -197,7 +197,6 @@
         "active = []\n",
         "completed = [] \n",
         "uncompleted = []\n",
-        "watched_movies_list = []\n",
         "watched_list_url = \"https://www.imdb.com/search/title/?title_type=feature&lists=ls047519430&view=simple&sort=alpha,asc&count=250&start=\"\n",
         "\n",
         "checkpoint = '.ipynb_checkpoints'\n",
@@ -244,11 +243,13 @@
         "    international_titles_list = \"ls560608427\"\n",
         "    indian_titles_list= \"ls560456074\"\n",
         "    animation_titles_list = \"ls560333050\"\n",
-        "    watched_movies_list =\"ls047519430\"\n",
+        "    watched_movies_list_id =\"ls047519430\"\n",
+        "    watched_movies_list = []\n",
         "    watched_series_list = \"ls047701980\"\n",
         "    movie_skip_list = \"\"\n",
         "\n",
-        "config = SystemConfig.instance()\n",
+        "if not 'config' in globals():\n",
+        "    config = SystemConfig.instance()\n",
         "\n",
         "def get_installed_pip_pkgs():\n",
         "    with hide:\n",
@@ -376,8 +377,8 @@
         "                year_raw = all_items[i].find(class_=\"lister-item-year\").text\n",
         "                title_raw = all_items[i].a.text\n",
         "                title = find_title(title_raw, year_raw)      \n",
-        "                watched_movies_list.append(title)\n",
-        "        info(f\"Scrapped watched movies: {len(watched_movies_list)} movie.\")\n",
+        "                config.watched_movies_list.append(title)\n",
+        "        info(f\"Scrapped watched movies: {len(config.watched_movies_list)} movie.\")\n",
         "        appstate.watchedlistready = True\n",
         "    except Exception as e:\n",
         "        error(ex())\n",
@@ -429,7 +430,7 @@
         "    enable_lt_task.name = SETUP_LT\n",
         "    config.setupthreads.add(enable_lt_task)\n",
         "    enable_lt_task.start()\n",
-        "    if not watched_movies_list:\n",
+        "    if not config.watched_movies_list:\n",
         "        scrape_watchedmovielist_task = Thread(target= scrape_watched_movies_list, args=(1,2))\n",
         "        scrape_watchedmovielist_task.name = SCRAPE_WATCHED_LIST\n",
         "        config.setupthreads.add(scrape_watchedmovielist_task)\n",
@@ -1290,8 +1291,9 @@
         "    labels = \"\"\n",
         "\n",
         "class IMDBTitle:\n",
-        "    def __init__(self, title, runtime, rating, votes, genres= \"\", directors= \"\", stars= \"\"):\n",
-        "        self.title = title\n",
+        "    def __init__(self, title_text, title_link= '', runtime= '', rating= '', votes= '', genres= \"\", directors= \"\", stars= \"\"):\n",
+        "        self.title_text = title_text\n",
+        "        self.title_link = title_link\n",
         "        self.runtime = runtime\n",
         "        self.rating = rating\n",
         "        self.votes = votes\n",
@@ -1299,8 +1301,16 @@
         "        self.stars = stars\n",
         "        self.genres = genres\n",
         "\n",
-        "    title = runtime = rating = votes = director = stars = genres = \"\"\n",
-        "    downloaded = watched = False\n",
+        "    title_text = None\n",
+        "    title_link = None\n",
+        "    runtime = None\n",
+        "    rating = None\n",
+        "    votes = None\n",
+        "    director = None\n",
+        "    stars = None\n",
+        "    genres = None\n",
+        "    downloaded = False\n",
+        "    watched = False\n",
         "\n",
         "class DownloadResult:\n",
         "    def __init__(this, name, size = 0, date = \"\", seeders = \"\", leechers = \"\", uploader = \"\", href = \"\", downloaded= False, watched= False, attrs= None):\n",
@@ -1411,16 +1421,16 @@
         "        params = self.params\n",
         "        if e.column == ' ':\n",
         "            result: IMDBTitle = self.results[e.row]\n",
-        "            info(f'Searching download {result.title} from IMDB search.')\n",
-        "            search = f\"{result.title} {self.params.siteparameters}\"\n",
-        "            switchview(nav[SEARCH_TAB], getloadingview( f'Search for {types[self.attrs.type_]} \"{result.title}\" site: {params.sites[0]} page: 1.'), temp= True)\n",
+        "            info(f'Searching download {result.title_link} from IMDB search.')\n",
+        "            search = f\"{result.title_text} {self.params.siteparameters}\"\n",
+        "            switchview(nav[SEARCH_TAB], getloadingview( f'Search for {types[self.attrs.type_]} \"{result.title_link}\" site: {params.sites[0]} page: 1.'), temp= True)\n",
         "            maintabs.selected_index = appstate.tab_indices[SEARCH_TAB]\n",
         "            search_process(site= params.sites[0], search= search, attrs= self.attrs, category= params.sitecategory, sort= SEEDERSSORT, order= DESCORDER, page= 1, source= IMDB_TAB)\n",
         "\n",
         "    def getdataframe(self):\n",
         "        resulttablesource = {\"Title\":[],  \"Director\": [], \"Stars\": [],\"Genres\": [], \"Rating\": [], \"Votes\": [], \"Runtime\": [], \"Downloaded\": [], \"Watched\": [],\" \": []}\n",
         "        for result in self.results:\n",
-        "            resulttablesource['Title'].append(result.title)\n",
+        "            resulttablesource['Title'].append(result.title_link)\n",
         "            resulttablesource['Director'].append(result.director)\n",
         "            resulttablesource['Stars'].append(result.stars)\n",
         "            resulttablesource['Genres'].append(result.genres)\n",
@@ -2316,8 +2326,8 @@
         "from math import ceil\n",
         "\n",
         "windowtargetstr = 'target=\"_blank\" style= \"color: rgb(1, 74, 118); text-decoration: none;\"'\n",
-        "stars_re = r\"(?<=Stars?:)<a href.*</a>\"\n",
-        "director_re = r\"(?<=Directors?:)<a href.*</a>(?=<span)\"\n",
+        "stars_re = r\"(?<=Stars:)<a href.*</a>\"\n",
+        "director_re = r\"(((?<=Director:)<a href.*</a>)|((?<=Directors:)<a href.*</a>))(?=<span)\"\n",
         "\n",
         "def process_title_link(title_tag, year_text):\n",
         "    #year = re.search(year_re, year_raw)\n",
@@ -2431,8 +2441,8 @@
         "                stars = search.group().replace('<a href=\"', f'<a {windowtargetstr} href=\"{IMDB_BASE}') if search else \"\"\n",
         "                search = re.search(director_re, pplstr)\n",
         "                directors = search.group().replace('<a href=\"', f'<a {windowtargetstr} href=\"{IMDB_BASE}') if search else \"\"\n",
-        "                title= IMDBTitle(title= title_link, runtime= runtime, rating= rating, votes= votes, genres= genres, directors= directors, stars= stars)\n",
-        "                if title_text in watched_movies_list:\n",
+        "                title= IMDBTitle(title_text= title_text, title_link= title_link, runtime= runtime, rating= rating, votes= votes, genres= genres, directors= directors, stars= stars)\n",
+        "                if title_text in config.watched_movies_list:\n",
         "                    title.watched = True\n",
         "                    watched.append(title)\n",
         "                if movie_exists(title_text):\n",
